<resources>
    <string name="app_name">FinalProject</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_page_one">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_page">About Page</string>
    <string name="back">Back</string>
    <string name="suitable_for_anyone_looking_for_individualized_and_or_group_tutoring">suitable for anyone looking for individualized and/or group tutoring</string>
    <string name="welcome_to_the_education_anywhere">Welcome to the Education Anywhere</string>
    <string name="todo">TODO</string>
    <string name="all_ages_accepted">all ages accepted</string>
    <string name="low_cost_within_budget">low cost, within budget</string>
    <string name="accessible_through_desktop">accessible through desktop</string>
    <string name="monthly_guardian_meetings">monthly guardian meetings</string>
    <string name="educational_games">Suitable for anyone looking for individualized and/or group tutoring,
All ages accepted including college students,
Low cost, within budget,
On the go, accessible through desktop,
Monthly guardian meetings,
Educational games,
</string>
</resources>