<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
<!-- Username takes anything with @gmail.com -->
    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#F2000000"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints="" />
<!-- Password takes anything with at least 8 letters (numbers, symbols, Caps not included-->
    <EditText
        android:id="@+id/password"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />
<!-- Login Button -->
    <!-- Image #2-->

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="72dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/backtomain"
        app:layout_constraintEnd_toStartOf="@+id/backtomain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.076" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/index2"
        android:contentDescription="@string/todo" />
<!-- Back button leads to Activity_page_one.xml -->
    <Button
        android:id="@+id/backtomain"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginEnd="100dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="536dp" />

</androidx.constraintlayout.widget.ConstraintLayout>